translat func def&call&ret statements