@@ -4,6 +4,7 @@ import lamo.luaj.LNumber;
 import lamo.luaj.LString;
 import lamo.luaj.LValue;
 import lamo.luaj.parser.ast.*;
+import lamo.luaj.util.ArrayUtil;
 import lamo.luaj.vm.Instruction;
 import lamo.luaj.vm.OpCode;
 import lamo.luaj.vm.Proto;
@@ -14,23 +15,24 @@ import java.util.LinkedList;
 public class Translator {
 
 	private Chunk chunk;
+	private Proto proto;
 	private Translator parent;
 	private ArrayList<Translator> children = new ArrayList<>();
 
-	private ArrayList<LocVar> localVars = new ArrayList<>();
-	private LinkedList<Integer> actVars = new LinkedList<>();
-	private int freeReg;
+	private CodePiece currentPiece = new CodePiece(null);
 
-	private LinkedList<Scope> scopes = new LinkedList<>();
+	ArrayList<LocVar> localVars = new ArrayList<>();
+	LinkedList<Integer> actVars = new LinkedList<>();
+	ArrayList<UpValue> upvalues = new ArrayList<>();
+	ArrayList<LValue> ks = new ArrayList<>();
+	int freeReg;
 
-	private ArrayList<Proto> ps = new ArrayList<>();
-	private ArrayList<String> upValueNemes = new ArrayList<>();
-	private ArrayList<LValue> ks = new ArrayList<>();
+	LinkedList<Scope> scopes = new LinkedList<>();
+	ArrayList<Proto> ps = new ArrayList<>();
 
-	private ArrayList<Instruction> code = new ArrayList<>();
 
 	public Translator(Chunk chunk) {
-		this.chunk = chunk;
+		this(chunk, null);
 	}
 
 	public Translator(Chunk chunk, Translator parent) {
@@ -45,6 +47,10 @@ public class Translator {
 		return this.chunk;
 	}
 
+	public Proto getProto() {
+		return this.proto;
+	}
+
 	public Translator getParent() {
 		return this.parent;
 	}
@@ -54,45 +60,37 @@ public class Translator {
 	}
 
 	public Proto translat() {
-		clean();
+		if (this.proto != null) {
+			return this.proto;
+		}
 
 		openScope();
 		for (Stat stat : this.chunk.getStatements()) {
 			translatStat(stat);
 			this.freeReg = this.actVars.size();
 		}
-
+		ret(0, 0);
 		closeScope();
-		return toProto();
-	}
 
-	public void clean() {
-		this.localVars.clear();
-		this.actVars.clear();
-		this.freeReg = 0;
-
-		this.scopes.clear();
-		this.ps.clear();
-		this.upValueNemes.clear();
-		this.ks.clear();
-
-		this.code.clear();
-	}
-
-	public String toString() {
-		return toProto().toString();
-	}
-
-	private Proto toProto() {
-		Instruction[] is = this.code.toArray(new Instruction[this.code.size()]);
+		ArrayList<Instruction> code = getCode();
+		Instruction[] is = code.toArray(new Instruction[code.size()]);
 		Proto[] ps = this.ps.toArray(new Proto[this.ps.size()]);
 		Proto.LocVar[] ls = new Proto.LocVar[this.localVars.size()];
 		for (int i = 0; i < this.localVars.size(); ++i) {
 			ls[i] = this.localVars.get(i).toProtoLocVar();
 		}
+		String[] uvs = new String[this.upvalues.size()];
+		for (int i = 0; i < this.upvalues.size(); ++i) {
+			uvs[i] = this.upvalues.get(i).name;
+		}
 		LValue[] ks = this.ks.toArray(new LValue[this.ks.size()]);
 
-		return new Proto(is, ps, ls, null, ks);
+		this.proto = new Proto(is, ps, ls, null, ks);
+		return this.proto;
+	}
+
+	public String toString() {
+		return this.proto.toString();
 	}
 
 	private void translatStat(Stat stat) {
@@ -103,16 +101,25 @@ public class Translator {
 				addLocalVar(n);
 			}
 			Expr[] es = ls.getExprs();
+			int extra = names.length;
 			if (es != null) {
-				for (Expr e : es) {
-					if (e == es[es.length - 1]) {
-						adjustAssign(names.length, es.length, e);
-					} else {
-						translatExpr(e);
-					}
+				extra -= es.length;
+				Expr e = null;
+				for (int i = 0; i < es.length; ++i) {
+					e = es[i];
+					translatExpr(e);
 				}
-			} else {
-				adjustAssign(names.length, 0);
+				if (e.hasMultRet()) {
+					Instruction last = ArrayUtil.get(getCode(), -1);
+					setReturns(last, extra > 0 ? extra + 1 : 0);
+					if (extra > 0) {
+						this.freeReg += extra;
+					}
+					extra = 0;
+				}
+			}
+			if (extra > 0) {
+				loadNil(extra);
 			}
 		} else if (stat instanceof BlockStat) {
 			openScope();
@@ -120,6 +127,75 @@ public class Translator {
 				translatStat(s);
 			}
 			closeScope();
+		} else if (stat instanceof FuncStat) {
+			FuncStat fs = (FuncStat)stat;
+			translatFuncBody(fs.getBody());
+			int nup = ArrayUtil.get(this.children, -1).upvalues.size();
+			Instruction inst = ArrayUtil.get(getCode(), -(nup + 1));
+			int a = inst.getA();
+			VarInfo info = translatVar(fs.getName().getVar());
+			switch (info.type) {
+				case VarInfo.LOCAL:
+					inst.setA(info.index);
+					break;
+				case VarInfo.UPVALUE:
+					instruction(new Instruction(OpCode.SETUPVALUE, info.index, a, 0));
+					break;
+				case VarInfo.GLOBAL:
+					instruction(new Instruction(OpCode.SETGLOBAL, info.index, a));
+					break;
+				default:
+					assert(false);
+			}
+		} else if (stat instanceof FuncCallStat) {
+			translatPrimaryExpr(((FuncCallStat)stat).getExpr());
+		} else if (stat instanceof ReturnStat) {
+			Expr[] es = ((ReturnStat)stat).getExprs();
+			int first = this.actVars.size(), nret = 0;
+			if (es != null) {
+				nret = es.length;
+				Expr e = null;
+				for (int i = 0; i < es.length; ++i) {
+					e = es[i];
+					translatExpr(e);
+				}
+				if (e.hasMultRet()) {
+					Instruction last = ArrayUtil.get(getCode(), -1);
+					if (last.getOpCode() == OpCode.CALL) {
+						if (es.length == 1) {
+							last.setOpCode(OpCode.TAILCALL);
+						}
+						setReturns(last, -1);
+					}
+					nret = -1;
+				}
+			}
+			ret(first, nret);
+		}
+	}
+
+	private void translatFuncBody(FuncBody body) {
+		Translator t = new Translator(body.getChunk(), this);
+		if (body.isNeedSelf()) {
+			t.addLocalVar("self");
+		}
+		if (body.getParlist() != null && body.getParlist().getParams() != null) {
+			for (String p : body.getParlist().getParams()) {
+				t.addLocalVar(p);
+			}
+		}
+
+		Proto p = t.translat();
+		this.ps.add(p);
+		instruction(new Instruction(OpCode.CLOSURE, this.freeReg++, this.ps.size() - 1));
+		UpValue uv;
+		for (int i = 0; i < t.upvalues.size(); ++i) {
+			uv = t.upvalues.get(i);
+			if (uv.inSameLevel) {
+				instruction(new Instruction(OpCode.MOVE, i, uv.index, 0));
+			} else {
+				instruction(new Instruction(OpCode.GETUPVALUE, i, uv.index, 0));
+			}
 		}
 	}
 
@@ -127,34 +203,84 @@ public class Translator {
 		if (e instanceof KExpr) {
 			translatKExpr((KExpr)e);
 		} else if (e instanceof PrimaryExpr) {
-			PrimaryExpr pe = (PrimaryExpr)e;
-			Expr prefixExpr = pe.getPrefixExpr();
-			if (prefixExpr instanceof Var) {
-				translatVar((Var)prefixExpr);
-			} else {
-				translatExpr(e);
-			}
+			translatPrimaryExpr((PrimaryExpr)e);
+		} else if (e instanceof FuncExpr) {
+			FuncBody body = ((FuncExpr) e).getBody();
+			translatFuncBody(body);
+		} else if (e instanceof BinaryExpr) {
+
+		} else if (e instanceof UnaryExpr) {
+
+		} else if (e instanceof TableConstructorExpr) {
+
+		} else if (e instanceof VarargExpr) {
 
 		}
 	}
 
-	private void translatVar(Var var) {
-		VarInfo info = varType(var.getName());
-		if (info.type == VarInfo.LOCAL) {
-			move(info.index);
-		} else if (info.type == VarInfo.UPVALUE) {
-			instruction(new Instruction(OpCode.GETUPVALUE, this.freeReg++, 0, 0));
-		} else if (info.type == VarInfo.GLOBAL) {
-			int idx = addKString(var.getName());
-			instruction(new Instruction(OpCode.GETGLOBAL, this.freeReg++, idx));
-		} else {
-			assert(false);
-		}
+	private VarInfo translatVar(Var var) {
+		return singleVar(var.getName());
+	}
 
+	private void translatPrimaryExpr(PrimaryExpr expr) {
+		Expr prefixExpr = expr.getPrefixExpr();
+		if (prefixExpr instanceof Var) {
+			Var var = (Var)prefixExpr;
+			VarInfo info = translatVar(var);
+			switch (info.type) {
+				case VarInfo.LOCAL:
+					move(this.freeReg++, info.index);
+					break;
+				case VarInfo.UPVALUE: {
+					UpValue uv = this.upvalues.get(info.index);
+					if (uv.inSameLevel) {
+						move(this.freeReg++, uv.index);
+					} else {
+						instruction(new Instruction(OpCode.GETUPVALUE, this.freeReg++, uv.index, 0));
+					}
+					break;
+				}
+				case VarInfo.GLOBAL: {
+					int idx = addKString(var.getName());
+					instruction(new Instruction(OpCode.GETGLOBAL, this.freeReg++, idx));
+					break;
+				}
+				default:
+					assert(false);
+			}
+		} else {
+			translatExpr(prefixExpr);
+		}
+		PrimaryExpr.Segment[] segs = expr.getSegments();
+		if (segs != null) {
+			for (PrimaryExpr.Segment seg : segs) {
+				translatSegment(seg);
+			}
+		}
 	}
 
 	private void translatSegment(PrimaryExpr.Segment seg) {
+		int reg = this.freeReg - 1;
+		if (seg instanceof PrimaryExpr.FieldSegment) {
+			Expr key = ((PrimaryExpr.FieldSegment)seg).getKey();
+			if (key instanceof KExpr) {
 
+			} else {
+
+			}
+		} else if (seg instanceof PrimaryExpr.FuncArgsSegment) {
+			int base = reg;
+			Expr[] args = ((PrimaryExpr.FuncArgsSegment)seg).getArgs();
+			if (args != null) {
+				for (Expr e : args) {
+					translatExpr(e);
+				}
+			}
+			int np = this.freeReg - base - 1;
+			call(base, np, 1);
+		} else if (seg instanceof PrimaryExpr.FieldAndArgsSegment) {
+
+		}
 	}
 
 	private void translatKExpr(KExpr e) {
@@ -165,29 +291,14 @@ public class Translator {
 		} else if (e instanceof False) {
 			loadBoolean(false);
 		} else if (e instanceof LiteralNumber) {
-			loadNumber(((LiteralNumber)e).getText());
+			int i = addKNumber(((LiteralNumber)e).getText());
+			loadK(i);
 		} else if (e instanceof LiteralString) {
-			loadString(((LiteralString)e).getText());
+			int i = addKString(((LiteralString)e).getText());
+			loadK(i);
 		} else {
 			assert(false);
 		}
-	}
-
-	private void adjustAssign(int nargs, int nexps) {
-		loadNil(this.freeReg, nargs - nexps);
-	}
-
-	private void adjustAssign(int nargs, int nexps, Expr expr) {
-		int extra = nargs - nexps;
-		translatExpr(expr);
-		if (expr.hasMultRet()) {
-		} else if (extra > 0){
-			loadNil(this.freeReg, extra);
-		}
-	}
-
-	private int reserveReg(int n) {
-		return this.freeReg += n;
 	}
 
 	private void openScope() {
@@ -195,7 +306,7 @@ public class Translator {
 	}
 
 	private void closeScope() {
-		int pc = this.code.size();
+		int pc = getCode().size();
 		int n = getLastScope().numOfLocVar;
 		for (int i = 1; i <= n; ++i) {
 			this.localVars.get(this.localVars.size() - i).endPC = pc;
@@ -206,15 +317,24 @@ public class Translator {
 	}
 
 	private Scope getLastScope() {
-		return this.scopes.get(this.scopes.size() - 1);
+		return this.scopes.getLast();
 	}
 
-	private void addLocalVar(String name) {
+	private void openPiece() {
+		this.currentPiece = new CodePiece(this.currentPiece);
+	}
+
+	private void closePiece() {
+		this.currentPiece.pieceUp();
+		this.currentPiece = this.currentPiece.prev;
+	}
+
+	private int addLocalVar(String name) {
 		LocVar var = new LocVar(name);
-		var.startPC = code.size();
+		var.startPC = getCode().size();
 		this.localVars.add(var);
 		this.actVars.add(this.localVars.size() - 1);
-		getLastScope().numOfLocVar++;
+		return getLastScope().numOfLocVar++;
 	}
 
 	private int findLocalVar(String name) {
@@ -226,26 +346,27 @@ public class Translator {
 		return -1;
 	}
 
-	private VarInfo varType(String name) {
-		VarInfo info = VarInfo.singleton;
-		Translator translator = this;
-		int l = 0;
-		while (translator != null) {
-			info.index = translator.findLocalVar(name);
-			if (info.index >= 0) {
-				if (l == 0) {
-					info.type = VarInfo.LOCAL;
-				} else {
-					info.type = VarInfo.UPVALUE;
-				}
-				return info;
-			}
-			l++;
-			translator = translator.getParent();
+	private int addUpValue(String name, int idx, boolean inSameChunk) {
+		int index = findUpValue(name);
+		if (index >= 0) {
+			return index;
 		}
 
-		info.type = VarInfo.GLOBAL;
-		return info;
+		UpValue uv = new UpValue();
+		uv.name = name;
+		uv.index = idx;
+		uv.inSameLevel = inSameChunk;
+		this.upvalues.add(uv);
+		return this.upvalues.size() - 1;
+	}
+
+	private int findUpValue(String name) {
+		for (int i = 0; i < this.upvalues.size(); ++i) {
+			if (this.upvalues.get(i).name.equals(name)) {
+				return i;
+			}
+		}
+		return -1;
 	}
 
 	private int addKNumber(String n) {
@@ -271,18 +392,73 @@ public class Translator {
 		return this.ks.lastIndexOf(v);
 	}
 
-	private void move(int from) {
-		instruction(new Instruction(OpCode.MOVE, this.freeReg++, from, 0));
+	private VarInfo singleVar(String name) {
+		VarInfo info = VarInfo.singleton;
+		info.type = VarInfo.GLOBAL;
+		ArrayList<Translator> ts = new ArrayList<>();
+		Translator t = this, last = null;
+		do {
+			info.index = t.findLocalVar(name);
+			if (info.index >= 0) {
+				if (this == t) {
+					info.type = VarInfo.LOCAL;
+				} else {
+					info.type = VarInfo.UPVALUE;
+					int idx = 0;
+					for (Translator tr : ts) {
+						if (tr == last) {
+							idx = tr.addUpValue(name, info.index, true);
+						} else {
+							idx = tr.addUpValue(name, idx, false);
+						}
+						if (tr == this) {
+							info.index = idx;
+						}
+					}
+				}
+				return info;
+			} else if (this == t && (info.index = t.findUpValue(name)) >= 0) {
+				info.type = VarInfo.UPVALUE;
+				return info;
+			}
+			last = t;
+			ts.add(t);
+		} while ((t = t.getParent()) != null);
+
+		return info;
+	}
+
+	private void call(int base, int nparam, int nret) {
+		instruction(new Instruction(OpCode.CALL, base, nparam + 1, nret + 1));
+	}
+
+	private void ret(int first, int nret) {
+		instruction(new Instruction(OpCode.RETURN, first, nret + 1, 0));
+	}
+
+	private void setReturns(Instruction inst, int nret) {
+		if (inst.getOpCode() == OpCode.CALL) {
+			assert(nret >= -1);
+			inst.setC(nret + 1);
+		}
+	}
+
+	private void move(int to, int from) {
+		if (from != to) {
+			instruction(new Instruction(OpCode.MOVE, to, from, 0));
+		}
 	}
 
 	private void loadNil() {
-		loadNil(this.freeReg, 1);
+		loadNil(1);
 	}
 
-	private void loadNil(int from, int n) {
+	private void loadNil(int n) {
+		int from = this.freeReg;
 		this.freeReg += n;
-		if (this.code.size() > 0) {
-			Instruction prev = this.code.get(this.code.size() - 1);
+		ArrayList<Instruction> code = getCode();
+		if (code.size() > 0) {
+			Instruction prev = ArrayUtil.get(code, -1);
 			if (prev.getOpCode() == OpCode.LOADNIL && prev.getA() <= from && from <= prev.getB() + 1) {
 				if (from + n - 1 > prev.getB()) {
 					prev.setB(from + n - 1);
@@ -297,22 +473,19 @@ public class Translator {
 		instruction(new Instruction(OpCode.LOADBOOL, this.freeReg++, v ? 1 : 0, 0));
 	}
 
-	private void loadString(String s) {
-		loadK(new LString(s));
-	}
-
-	private void loadNumber(String n) {
-		loadK(new LNumber(Double.parseDouble(n)));
-	}
-
-	private void loadK(LValue v) {
-		int i = addK(v);
+	private void loadK(int i) {
 		instruction(new Instruction(OpCode.LOADK, this.freeReg++, i));
 	}
 
-	private Instruction instruction(Instruction inst) {
-		this.code.add(inst);
-		return this.code.get(this.code.size() - 1);
+	private void instruction(Instruction inst) {
+		if (inst == null) {
+			return;
+		}
+		getCode().add(inst);
+	}
+
+	private ArrayList<Instruction> getCode() {
+		return this.currentPiece.code;
 	}
 
 	private class Scope {
@@ -346,6 +519,15 @@ public class Translator {
 		private Proto.LocVar toProtoLocVar() {
 			return new Proto.LocVar(this.name, this.startPC, this.endPC);
 		}
+
+	}
+
+	private static class UpValue {
+
+		private String name;
+		private int index;
+
+		private boolean inSameLevel;
 
 	}
 
